--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17701,6 +17701,11 @@ img {
   color: #e3342f;
 }
 
+.button-active {
+  background-color: #0AB89F !important;
+  color: white !important;
+}
+
 .button-color {
   border: 2px solid #0AB89F;
   color: #0AB89F;
