--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -328,6 +328,11 @@ img{
 
 //BUTTON
 
+.button-active{
+  background-color: $default_green !important;
+  color: white !important;
+}
+
 .button-color{
     border: 2px solid $default_green;
     color: $default_green;
