--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -333,6 +333,11 @@ img{
   color: white !important;
 }
 
+.button-active-orange{
+  background-color: $orange !important;
+  color: white !important;
+}
+
 .button-color{
     border: 2px solid $default_green;
     color: $default_green;
@@ -397,6 +402,14 @@ img{
         text-decoration: none;
         cursor: pointer;
     }
+}
+
+.sector-style{
+  display: inline-block;
+  padding: 5px 10px 4px 10px;
+  border-radius: 0.1875rem;
+  color: white;
+  background-color: $orange;
 }
 
 .button-style{
