Regions,Country,Search

--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -1,4 +1,4 @@
-#account-index{
+#search{
     .background{
         background-color: white;
         background-image: url('../../../../public/storage/images/jumbotron1.jpg');
