--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -413,16 +413,16 @@
         .search{
             .search-main{
                 .search-style{
-                    &:first-child{
-                        border-top-left-radius: 20px;
-                        border-top-right-radius: 0px;
-                        border-bottom-left-radius: 20px;
-                    }
-                    &:last-child{
-                        border-top-right-radius: 20px;
-                        border-bottom-left-radius: 0px;
-                        border-bottom-right-radius: 20px;
-                    }
+                    // &:first-child{
+                    //     border-top-left-radius: 20px;
+                    //     border-top-right-radius: 0px;
+                    //     border-bottom-left-radius: 20px;
+                    // }
+                    // &:last-child{
+                    //     border-top-right-radius: 20px;
+                    //     border-bottom-left-radius: 0px;
+                    //     border-bottom-right-radius: 20px;
+                    // }
                     button{
                         height: 50px;
                     }
