--- a/resources/sass/admin/notifications/index.scss
+++ b/resources/sass/admin/notifications/index.scss
@@ -5,7 +5,7 @@
         height: calc(100% - 50px);
         padding: 10px;
         border-radius: 10px;
-        background-color: $light_black;
+        background-color: $default_green-deactivate;
         overflow-y: scroll;
         .not-item{
             display: inline-block;
