--- a/resources/sass/admin/accounts/show.scss
+++ b/resources/sass/admin/accounts/show.scss
@@ -1,4 +1,4 @@
-#page-show{
+#show{
     .item-no-padding{
         padding: 0;
     }
@@ -6,52 +6,35 @@
         padding: 30px;
     }
     .profile{
-        .profile-cover-cont{
-            position: relative;
-            width: 100%;
-            //height: 350px;
-            min-height: 100px;
-            .profile-cover{
-                width: 100%;
-                height: 100%;
-                //object-fit: cover;
-                object-fit: scale-down;
-                // border-radius: 10px 10px 0px 0px;
-            }
-            .profile-image{
-                width: 150px;
-                height: 150px;
-                object-fit: cover;
-                background-color: white;
-                position: absolute;
-                bottom: 0px;
-                left: 50%;
-                border-radius: 50%;
-                transform: translate(-50%,50%);
-                box-shadow: 0px 0px 10px 1px #555;
-                img{
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 50%;
-                    object-fit: cover;
-                }
-                a{
-                    top:20px;
-                    right: 20px;
-                }
+        .profile-image{
+            a{
+                top:20px;
+                right: 20px;
             }
         }
-        .profile-header{
-            padding-bottom: 10px;
-            padding-top: 100px;
-            .name{
-                text-align: center;
-                h2{
-                    padding-right: 0px;
-                }
+    }
+
+    .page-list{
+      width: 100%;
+      height: 100%;
+      border: 3px solid gray;
+      height: 70px;
+        a{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            color: gray;
+            transition: .3s;
+            &:hover{
+                text-decoration: none;
+                background-color: gray;
+                color: white;
             }
-            .main-buttons{
-                text-align: center;
+            span{
+                display: inline-block;
+                width: 60%;
             }
         }
     }
