--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -15,7 +15,7 @@ body{
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
-    .delete-alert{
+    .alert{
         position: fixed;
         //overflow-y: hidden;
         // position: absolute;
@@ -26,11 +26,13 @@ body{
         background-color: rgba(1, 1, 1, .5);
         z-index: 5;
         left: 0px;
-        .delete-alert-item{
+        .alert-item{
+            max-height: 500px;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
+            overflow-y: auto;
             .item-style{
                 display: flex;
                 flex-direction: column;
@@ -291,10 +293,33 @@ ul>p{
     }
 }
 
-img{
+
+.img-cont{
+    display: inline-block;
+    border-radius: 50%;
+    background-color: $default_green;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border-radius: 50%;
+    }
+}
+.micro-img{
+    width: 20px;
+    height: 20px;
+}
+.mini-img{
+    width: 50px;
+    height: 50px;
+}
+.medium-img{
+    width: 150px;
+    height: 150px;
+}
+.max-img{
     width: 300px;
     height: 300px;
-    object-fit: contain;
 }
 
 .tag{
@@ -404,12 +429,13 @@ img{
     }
 }
 
-.sector-style{
+.border-style{
   display: inline-block;
-  padding: 5px 10px 4px 10px;
-  border-radius: 0.1875rem;
-  color: white;
-  background-color: $orange;
+  padding: 3px 10px 2px 10px;
+  border-radius: 0.15rem;
+  color: gray;
+  border: 2px solid gray;
+  margin-right: 3px;
 }
 
 .button-style{
@@ -431,10 +457,14 @@ img{
     border-radius: 50%;
     height: 30px;
     width: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    //z-index: 1;
+    position: relative;
+    i{
+      position: absolute;
+      top:50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      font-size: 0.9rem;
+    }
     &:hover{
         text-decoration: none;
         cursor: pointer;
