--- a/resources/sass/admin/accounts/show.scss
+++ b/resources/sass/admin/accounts/show.scss
@@ -1,4 +1,5 @@
-#show{
+#user-show,
+#page-show{
     .item-no-padding{
         padding: 0;
     }
@@ -128,31 +129,20 @@
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
-            //padding: 5px 0;
-            img{
-                margin-top: 5px;
-                width: 200px;
-                height: 200px;
-                border-radius: 50%;
-                object-fit: cover;
-                background-color: $hover_gray;
-            }
+            // img{
+            //     margin-top: 5px;
+            //     width: 200px;
+            //     height: 200px;
+            //     border-radius: 50%;
+            //     object-fit: cover;
+            //     background-color: $hover_gray;
+            // }
             h6{
                 padding: 10px 0;
                 margin: 0;
                 .linkedin{
                     color: #3490dc;
                 }
-            }
-            .description{
-                padding-top: 10px;
-                height: 75px;
-                width: 100%;
-                font-size: 11px;
-                text-align: center;
-                display: flex;
-                justify-content: center;
-                align-items: center;
             }
         }
     }
