--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -297,7 +297,8 @@ ul>p{
 .img-cont{
     display: inline-block;
     border-radius: 50%;
-    background-color: $default_green;
+    background-color: white;
+    border: 2px solid $default_green;
     img{
         width: 100%;
         height: 100%;
@@ -358,45 +359,12 @@ ul>p{
   color: white !important;
 }
 
-.button-active-orange{
+.button-active-sector{
   background-color: $orange !important;
   color: white !important;
 }
 
-.button-color{
-    border: 2px solid $default_green;
-    color: $default_green;
-    background-color: white;
-    &:hover{
-        transition: 0.2s;
-        background-color: $default_green;
-        color: white;
-    }
-}
-
-.button-color-blue{
-    border: 2px solid $blue;
-    color: $blue;
-    background-color: white;
-    &:hover{
-        transition: 0.2s;
-        background-color: $blue;
-        color: white;
-    }
-}
-
-.button-color-red{
-    border: 2px solid $red;
-    color: $red;
-    background-color: white;
-    &:hover{
-        transition: 0.2s;
-        background-color: $red;
-        color: white;
-    }
-}
-
-.button-color-orange{
+.button-color-sector{
     border: 2px solid $orange;
     color: $orange;
     background-color: white;
@@ -407,25 +375,76 @@ ul>p{
     }
 }
 
+.button-color{
+    border: 2px solid $default_green;
+    background-color: $default_green;
+    color: white;
+    &:hover{
+        transition: 0.2s;
+        color: $default_green;
+        background-color: white;
+    }
+}
+
+.button-color-blue{
+    border: 2px solid $blue;
+    background-color: $blue;
+    color: white;
+    &:hover{
+        transition: 0.2s;
+        color: $blue;
+        background-color: white;
+    }
+}
+
+.button-color-red{
+    border: 2px solid $red;
+    background-color: $red;
+    color: white;
+    &:hover{
+        transition: 0.2s;
+        color: $red;
+        background-color: white;
+    }
+}
+
+.button-color-orange{
+    border: 2px solid $orange;
+    background-color: $orange;
+    color: white;
+    &:hover{
+        transition: 0.2s;
+        color: $orange;
+        background-color: white;
+    }
+}
+
 .button-color-gray{
     color: gray;
-    background-color: none;
+    background-color: none !important;
     display: inline-block;
     // padding: 5px 10px 4px 10px;
     min-width: auto !important;
+    position: relative;
     width: 30px;
     height: 30px;
     border-radius: 0.1875rem;
     transition: 0.2s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     &:hover{
         background-color: gray;
-        color: white;
         border-radius: 50%;
         text-decoration: none;
         cursor: pointer;
+        i{
+            color: white;
+        }
+    }
+    i{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        color: gray;
     }
 }
 
@@ -436,6 +455,7 @@ ul>p{
   color: gray;
   border: 2px solid gray;
   margin-right: 3px;
+  margin-bottom: 3px;
 }
 
 .button-style{
