--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -171,6 +171,45 @@ ul>p{
     }
 }
 
+.card-list{
+  width: 100%;
+  height: 100%;
+  border: 3px solid gray;
+  height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: gray;
+  .card-info{
+      display: inline-block;
+      width: 60%;
+  }
+}
+
+.page-list{
+  width: 100%;
+  height: 100%;
+  border: 3px solid gray;
+  height: 70px;
+    a{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        color: gray;
+        transition: .3s;
+        &:hover{
+            text-decoration: none;
+            background-color: gray;
+            color: white;
+        }
+        span{
+            display: inline-block;
+            width: 60%;
+        }
+    }
+}
 
 .info{
     position: relative;
